--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@ body{
 #container{
     display: grid;
     grid-template-columns: 1fr 5fr;
-    /* grid-template-rows: 1fr 5fr; */
-    /* grid-auto-rows: auto; */
-    /* height: 100vh; */
     row-gap: 8px;
 }
+
+/* This is the header, I have displayed it on the top of the page */
 
 .header{
     box-shadow: 0px 4px 2px gray;
@@ -103,6 +102,10 @@ button{
     border-radius: 32px;
 }
 
+/* The end of header */
+
+/* The start of sidebar */
+
 .sidebar{
     background-color: #0096FF;
     color: white;
@@ -136,6 +139,10 @@ li{
     height: 20px;
 }
 
+/* The end of sidebar */
+
+/* The start of main content */
+
 .main-content{
     background-color:#F1F1E5;
     grid-column: 2/3;
@@ -160,20 +167,15 @@ div.projects{
     grid-row: 2/3;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    /* grid-auto-rows: auto auto; */
     gap: 16px;
 }
 
 .projects > div{
-    /* position: relative;
-    top: 25%; */
     box-shadow: 4px 4px 4px #262626;
     background-color: white;
     border: none;
     padding: 24px;
     border-radius: 10px;
-    /* height: 200px;
-    width: 200px; */
 }
 
 .projects > div > p.title{
@@ -204,3 +206,5 @@ div.announcements{
     font-size: 1.3rem;
     font-weight: 700;
 }
+
+/* The end of main content */
